burger menu ready

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,7 +1,14 @@
 body {
+  overflow: hidden;
+  width: 100%;
   font-family: $Gilroy;
   font-style: normal;
   color: black;
+}
+
+.wrap {
+  width: 100%;
+  position: relative;
 }
 
 section {
@@ -67,44 +74,67 @@ img {
   object-fit: contain;
 }
 
-aside {
-  height: 100vh;
+._active {
+  right: 0%;
+}
 
-  & > .container {
-    height: 100%;
-    
-    background: $g-bg;
+aside {
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  z-index: 10;
+
+  transition: right 1s cubic-bezier(0.28, 0, 0.1, 1);
+  width: 100vw;
+  height: 100vh;
+  background: $g-bg;
+  right: -100%;
+
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .aside__icon {
+    &-wrapper {
+      width: 84px;
+      height: 32px;
+      margin-bottom: 36px;
+
+      display: flex;
+      justify-content: space-between;
+    }
+
+    width: 32px;
+    height: 32px;
+  }
+
+  a {
+    color: $c-black;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 34px;
+    text-align: center;
+    text-decoration: none;
+
+    &:not(:last-child) {
+      margin-bottom: 28px;
+    }
+  }
+
+  .button {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 230px;
+    height: 48px;
 
-    a {
-      color: $c-black;
-      font-size: 24px;
-      font-weight: 600;
-      line-height: 34px;
-      text-align: center;
-      text-decoration: none;
+    background-color: $c-orange;
+    color: $c-white;
+    font-size: 18px;
+    line-height: 24px;
 
-      &:not(:last-child) {
-        margin-bottom: 28px;
-      }
-    }
-
-    .button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 230px;
-      height: 48px;
-
-      background-color: $c-orange;
-      color: $c-white;
-      font-size: 18px;
-      line-height: 24px;
-
-      text-align: center;
-    }
+    text-align: center;
   }
 }
