--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -80,21 +80,23 @@ img {
 
 aside {
   position: fixed;
-  top: 0;
-  overflow: hidden;
   z-index: 10;
+  top: 0;
+  right: -100%;
+  overflow: hidden;
 
-  transition: right 1s cubic-bezier(0.28, 0, 0.1, 1);
+  transition: 1s cubic-bezier(0.28, 0, 0.1, 1);
   width: 100vw;
   height: 100vh;
   background: $g-bg;
-  right: -100%;
 
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
 
   .aside__icon {
     &-wrapper {
@@ -122,21 +124,6 @@ aside {
       margin-bottom: 28px;
     }
   }
-
-  .button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 230px;
-    height: 48px;
-
-    background-color: $c-orange;
-    color: $c-white;
-    font-size: 18px;
-    line-height: 24px;
-
-    text-align: center;
-  }
 }
 
 form.popup {
@@ -160,5 +147,33 @@ form.popup {
       font-family: $Gilroy;
       font-weight: 400;
     }
+  }
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 230px;
+  height: 48px;
+
+  background-color: $c-orange-dark;
+  text-decoration: none;
+
+  & > span {
+    color: $c-white;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      background-color: $c-orange-light;
+    }
+  }
+
+  &:active {
+    background-color: $c-orange;
   }
 }
