--- a/src/scss/burger.scss
+++ b/src/scss/burger.scss
@@ -88,3 +88,59 @@
 .hamburger--slider.is-active .hamburger-inner::after {
 	transform: translate3d(0, -16px, 0) rotate(-90deg);
 }
+
+// burger menu
+aside {
+	opacity: 0;
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	right: -100%;
+	overflow: hidden;
+
+	transition: right 1s cubic-bezier(0.28, 0, 0.1, 1), opacity 0.1s cubic-bezier(0.28, 0, 0.1, 1) 1s;
+	width: 100vw;
+	height: 100vh;
+	background: $g-bg;
+
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
+
+	.aside__icon {
+		&-wrapper {
+			width: 84px;
+			height: 32px;
+			margin-bottom: 36px;
+
+			display: flex;
+			justify-content: space-between;
+		}
+
+		width: 32px;
+		height: 32px;
+	}
+
+	a {
+		color: $c-black;
+		font-size: 24px;
+		font-weight: 600;
+		line-height: 34px;
+		text-align: center;
+		text-decoration: none;
+
+		&:not(:last-child) {
+			margin-bottom: 28px;
+		}
+	}
+}
+
+._active {
+	right: 0%;
+	opacity: 1;
+	transition: right 1s cubic-bezier(0.28, 0, 0.1, 1), opacity 0.15s cubic-bezier(0.28, 0, 0.1, 1);
+}
