--- a/src/scss/bubble.scss
+++ b/src/scss/bubble.scss
@@ -13,6 +13,64 @@
 	&--big-br {
 		border-radius: 30px;
 	}
+
+	&--orange {
+		background: rgb(252, 204, 152);
+		background: linear-gradient(155deg, rgba(252, 204, 152, 1) 0%, rgba(249, 159, 61, 1) 100%);
+
+		& > .bubble {
+			background: $c-orange-light;
+			box-shadow: 0px 1.60825px 4.02062px rgba(128, 128, 128, 0.3);
+		}
+	}
+
+	&-rectangle {
+		& img {
+			width: 40px;
+			height: 40px;
+		}
+	}
+
+	&-square {
+		&--big {
+			border-radius: 30px;
+
+			& > .bubble {
+				border-radius: 30px;
+				padding: 20px;
+			}
+
+			& img {
+				width: 60px;
+				height: 60px;
+			}
+		}
+
+		&--small {
+			& .bubble {
+				padding: 7px;
+			}
+
+			& img {
+				width: 26px;
+				height: 26px;
+			}
+		}
+	}
+
+	&-circle {
+		border-radius: 50px;
+
+		&--big {
+			width: 30px;
+			height: 30px;
+		}
+
+		&--small {
+			width: 16px;
+			height: 16px;
+		}
+	}
 }
 
 .bubble {
@@ -32,32 +90,76 @@
 		left: 0;
 
 		width: 100%;
-	}
 
-	&-rectangle {
-		& > img {
-			width: 40px;
-			height: 40px;
-		}
-	}
+		&--decorative {
+			position: absolute;
 
-	&-square {
-		&--big {
-			border-radius: 30px;
-			padding: 20px;
+			.circle {
+				border-radius: 50px;
+				padding: 1.5px;
+				background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(235, 235, 234, 1) 100%);
+				box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
 
-			& > img {
-				width: 60px;
-				height: 60px;
+				&--big {
+					width: 33px;
+					height: 33px;
+				}
+
+				&--small {
+					width: 19px;
+					height: 19px;
+				}
+
+				&-nested {
+					width: 100%;
+					height: 100%;
+					border-radius: inherit;
+					background: linear-gradient(102.05deg, #f7f7f7 12.61%, rgba(242, 242, 242, 0.75) 91.76%);
+				}
+
+				&--orange {
+					background: rgb(252, 204, 152);
+					background: linear-gradient(155deg, rgba(252, 204, 152, 1) 0%, rgba(249, 159, 61, 1) 100%);
+
+					& > .circle-nested {
+						background: $c-orange-light;
+						box-shadow: 0px 1.60825px 4.02062px rgba(128, 128, 128, 0.3);
+					}
+				}
 			}
-		}
 
-		&--small {
-			padding: 7px;
+			.square {
+				padding: 1.5px;
+				background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(235, 235, 234, 1) 100%);
+				box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
 
-			& > img {
-				width: 26px;
-				height: 26px;
+				&--big {
+					width: 33px;
+					height: 33px;
+				}
+
+				&--small {
+					border-radius: 5px;
+					width: 24px;
+					height: 24px;
+				}
+
+				&-nested {
+					width: 100%;
+					height: 100%;
+					border-radius: inherit;
+					background: linear-gradient(102.05deg, #f7f7f7 12.61%, rgba(242, 242, 242, 0.75) 91.76%);
+				}
+
+				&--orange {
+					background: rgb(252, 204, 152);
+					background: linear-gradient(155deg, rgba(252, 204, 152, 1) 0%, rgba(249, 159, 61, 1) 100%);
+
+					& > .square-nested {
+						background: $c-orange-light;
+						box-shadow: 0px 1.60825px 4.02062px rgba(128, 128, 128, 0.3);
+					}
+				}
 			}
 		}
 	}
