--- a/src/scss/advantages.scss
+++ b/src/scss/advantages.scss
@@ -1,127 +1,157 @@
 .advantages {
-	position: relative;
+  position: relative;
 
-	padding: 40px 0 138px;
+  padding: 40px 0 138px;
 
-	& > .container {
-		h2 {
-			margin-bottom: 24px;
+  & > .container {
+    h2 {
+      margin-bottom: 24px;
 
-			font-weight: 600;
-			font-size: 28px;
-			line-height: 36px;
+      font-weight: 600;
+      font-size: 28px;
+      line-height: 36px;
 
-			text-align: center;
-		}
+      text-align: center;
+    }
 
-		p {
-			margin-bottom: 24px;
+    p {
+      margin-bottom: 24px;
 
-			font-weight: 600;
-			font-size: 16px;
-			line-height: 22px;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 22px;
 
-			text-align: center;
+      text-align: center;
 
-			&:last-of-type {
-				margin-bottom: 138px;
-			}
-		}
+      &:last-of-type {
+        margin-bottom: 138px;
+      }
+    }
 
-		& > .bubbles {
-			position: static;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
+    & > .bubbles {
+      position: static;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-			& > .bubble-wrap {
-				position: static;
-				margin-bottom: 24px;
-			}
-		}
-	}
+      &--decorative {
+        top: 0;
 
-	&__tag-wrap {
-		position: relative;
-		width: 100%;
-		height: 300px;
+        & > * {
+          position: absolute;
+        }
 
-		background-color: $c-orange;
+        & > .square {
+          top: 10px;
+          left: 34px;
+        }
 
-		& > .advantages__tag {
-			position: absolute;
+        & > .circle {
+          &:nth-child(1) {
+            top: 6px;
+            right: 38px;
+          }
 
-			&:nth-child(7) {
-				top: 108px;
-				left: 39px;
-			}
+          &:nth-child(2) {
+            top: 28px;
+            left: 24px;
+          }
 
-			&:nth-child(8) {
-				top: 223px;
-				left: 26px;
-			}
+		  &:nth-child(3) {
+            top: 73px;
+            right: 24px;
+          }
+        }
+      }
 
-			& > span {
-				font-weight: bold;
-				font-size: 24px;
-				line-height: 31px;
-				color: $c-white;
-			}
-		}
+      & > .bubble-wrap {
+        position: static;
+        margin-bottom: 24px;
+      }
+    }
+  }
 
-		.bubble-wrap {
-			position: absolute;
-			z-index: 10;
+  &__tag-wrap {
+    position: relative;
+    width: 100%;
+    height: 300px;
 
-			border-radius: 50px;
-			box-shadow: 0px 4px 40px rgba(210, 210, 210, 0.86);
+    background-color: $c-orange;
 
-			&--extended {
-				width: 274px;
-			}
+    & > .advantages__tag {
+      position: absolute;
 
-			&:nth-child(1) {
-				top: -75px;
-				left: 24px;
-			}
+      &:nth-child(7) {
+        top: 108px;
+        left: 39px;
+      }
 
-			&:nth-child(2) {
-				top: -12px;
-				right: -5px;
-			}
+      &:nth-child(8) {
+        top: 223px;
+        left: 26px;
+      }
 
-			&:nth-child(3) {
-				top: 48px;
-				left: -16px;
-			}
+      & > span {
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 31px;
+        color: $c-white;
+      }
+    }
 
-			&:nth-child(4) {
-				top: 163px;
-				left: 19px;
-			}
+    .bubble-wrap {
+      position: absolute;
+      z-index: 10;
 
-			&:nth-child(5) {
-				bottom: -13px;
-				left: -15px;
-			}
+      border-radius: 50px;
+      box-shadow: 0px 4px 40px rgba(210, 210, 210, 0.86);
 
-			&:nth-child(6) {
-				bottom: -77px;
-				right: 0;
-			}
-		}
+      &--extended {
+        width: 274px;
+      }
 
-		.bubble {
-			padding: 8px 16px;
+      &:nth-child(1) {
+        top: -75px;
+        left: 24px;
+      }
 
-			& > span {
-				margin-left: 0;
+      &:nth-child(2) {
+        top: -12px;
+        right: -5px;
+      }
 
-				font-weight: 600;
-				font-size: 16px;
-				line-height: 19px;
-				color: $c-orange;
-			}
-		}
-	}
+      &:nth-child(3) {
+        top: 48px;
+        left: -16px;
+      }
+
+      &:nth-child(4) {
+        top: 163px;
+        left: 19px;
+      }
+
+      &:nth-child(5) {
+        bottom: -13px;
+        left: -15px;
+      }
+
+      &:nth-child(6) {
+        bottom: -77px;
+        right: 0;
+      }
+    }
+
+    .bubble {
+      padding: 8px 16px;
+
+      & > span {
+        margin-left: 0;
+
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 19px;
+        color: $c-orange;
+      }
+    }
+  }
 }
