--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -24,8 +24,9 @@ section {
 
 .container {
   @media ($ma-xs) {
-    max-width: none;
+    max-width: 320px;
     padding: 0 24px;
+    margin: 0 auto;
   }
 
   @media ($m-xs) {
@@ -119,4 +120,18 @@ form.popup {
   &:active {
     background-color: $c-orange;
   }
+}
+
+h2 {
+  margin-bottom: 24px;
+
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 36px;
+}
+
+p {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
 }
