--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -32,6 +32,7 @@ $c-white: #ffffff;
 $c-orange-light: #fbb971;
 $c-orange-dark: #ed8a1f;
 $c-orange: #f99f3d;
+$c-green: #48b452;
 
 // Fonts
 $Gilroy: "Gilroy", Arial, ui-sans-serif;
