--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -14,6 +14,7 @@
 		padding: 20px;
 
 		border-radius: 30px;
+		box-shadow: 0px 4px 100px rgba(128, 128, 128, 0.3);
 		background: linear-gradient(180deg, rgba(246, 246, 246, 1) 0%, rgba(242, 242, 242, 0.75) 100%);
 
 		&-bg {
