--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -27,37 +27,38 @@
 		flex-direction: column;
 
 		& > .bubbles {
-			$container-padding: 24px;
+			position: relative;
+			top: -72px;
+			left: auto;
+
+			height: 0;
 
 			& > .bubble-wrap {
 				&:nth-child(1) {
 					top: 72px;
-					left: $container-padding;
 				}
 
 				&:nth-child(2) {
 					top: 127px;
-					right: $container-padding;
+					right: 0;
 				}
 
 				&:nth-child(3) {
 					top: 435px;
-					left: $container-padding;
 				}
 
 				&:nth-child(4) {
 					top: 435px;
-					right: $container-padding;
+					right: 0;
 				}
 
 				&:nth-child(5) {
 					top: 501px;
-					left: $container-padding;
 				}
 
 				&:nth-child(6) {
 					top: 501px;
-					right: $container-padding;
+					right: 0;
 				}
 			}
 		}
