--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -1,107 +1,109 @@
 .examples {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 0px 0px 52px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 0px 52px;
 
-	background: linear-gradient(
-		180deg,
-		rgba(255, 255, 255, 1) 0%,
-		rgba(231, 231, 233, 1) 50%,
-		rgba(255, 255, 255, 1) 100%
-	);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(231, 231, 233, 1) 50%,
+    rgba(255, 255, 255, 1) 100%
+  );
 
-	& > .container {
-		position: relative;
+  & > .container {
+    position: relative;
 
-		.bubbles {
-			position: relative;
-			top: 0;
-			left: auto;
+    .bubbles {
+      position: relative;
+      top: 0;
+      left: auto;
 
-			& > .circle,
-			.square {
-				position: absolute;
-			}
+      & > .circle,
+      .square {
+        position: absolute;
+      }
 
-			* {
-				&:nth-child(1) {
-					top: 1px;
-					right: 15px;
-				}
+      * {
+        &:nth-child(1) {
+          top: 1px;
+          right: 15px;
+        }
 
-				&:nth-child(2) {
-					top: 104px;
-					right: 0;
-				}
+        &:nth-child(2) {
+          top: 104px;
+          right: 0;
+        }
 
-				&:nth-child(3) {
-					top: 21px;
-					left: 0;
-				}
-			}
-		}
-	}
+        &:nth-child(3) {
+          top: 21px;
+          left: 0;
+        }
+      }
+    }
+  }
 
-	.cards__card {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+  .cards {
+    row-gap: 32px;
 
-		padding: 24px 20px 32px;
+    &__card {
+      padding: 24px 20px 32px;
 
-		.bubbles {
-			position: relative;
-			top: 5px;
+      row-gap: 11px;
 
-			height: 0;
+      .bubbles {
+        position: relative;
+        top: 5px;
 
-			.bubble-wrap {
-				position: static;
-				box-shadow: 0 2.06089px 30px hsl(0deg 0% 50% / 30%);
+        height: 0;
 
-				.bubble {
-					& > span {
-						margin-bottom: 0;
-					}
-				}
-			}
-		}
+        .bubble-wrap {
+          position: static;
+          box-shadow: 0 2.06089px 30px hsl(0deg 0% 50% / 30%);
 
-		* {
-			text-align: center;
+          .bubble {
+            & > span {
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
 
-			&:not(a) {
-				& > span {
-					margin-bottom: 16px;
-				}
-			}
-		}
+      * {
+        text-align: center;
 
-		& > .cards__headline {
-			color: $c-orange;
-			font-size: 20px;
-			line-height: 28px;
-		}
+        &:not(a) {
+          & > span {
+            margin-bottom: 16px;
+          }
+        }
+      }
 
-		& > .cards__hr {
-			&:last-child {
-				margin-bottom: 12px;
-			}
-		}
+      & > .cards__headline {
+        color: $c-orange;
+        font-size: 20px;
+        line-height: 28px;
+      }
 
-		& > .cards__subheadline {
-			font-style: normal;
-			font-weight: 600;
-			font-size: 14px;
-			line-height: 28px;
-		}
-	}
+      & > .cards__hr {
+        &:last-child {
+          margin-bottom: 12px;
+        }
+      }
 
-	& > .container {
-		h2 {
-			margin-top: 45px;
-			text-align: center;
-		}
-	}
+      & > .cards__subheadline {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 28px;
+      }
+    }
+  }
+
+  & > .container {
+    h2 {
+      margin-top: 45px;
+      text-align: center;
+    }
+  }
 }
