--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -1,67 +1,82 @@
 .integrations {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background: $g-bg-reverse;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 40px;
 
-	& > .container {
-		position: relative;
+  background: $g-bg-reverse;
 
-		.bubbles {
-			position: relative;
-			top: 0;
-			left: auto;
+  & > .container {
+    position: relative;
 
-			& > .circle,
-			.square {
-				position: absolute;
-			}
+    .bubbles {
+      position: relative;
+      top: 0;
+      left: auto;
 
-			& > .circle {
-				width: 50px;
-			}
+      & > .circle,
+      .square {
+        position: absolute;
+      }
 
-			* {
-				&:nth-child(1) {
-					top: 50px;
-					right: 0px;
-				}
+      & > .circle {
+        width: 50px;
+      }
 
-				&:nth-child(2) {
-					top: 40px;
-					right: -7px;
-				}
-			}
-		}
-	}
+      * {
+        &:nth-child(1) {
+          top: 50px;
+          right: 0px;
+        }
 
-	.bubble-wrap {
-		border-radius: 10px;
+        &:nth-child(2) {
+          top: 40px;
+          right: -7px;
+        }
+      }
+    }
+  }
 
-		& > .bubble {
-			border-radius: 8px;
-		}
-	}
+  .bubble-wrap {
+    border-radius: 10px;
 
-	& > .container {
-		h2 {
-			width: 247px;
-		}
+    & > .bubble {
+      border-radius: 8px;
+    }
+  }
 
-		p {
-			font-weight: 400;
-			margin-bottom: 24px;
-		}
-	}
+  & > .container {
+    h2 {
+      width: 247px;
+    }
 
-	.cards__img {
-		position: absolute;
-		right: 80px;
-		top: -10px;
+    p {
+      font-weight: 400;
+      margin-bottom: 24px;
+    }
+  }
 
-		img {
-			width: 40px;
-			height: 40px;
-		}
-	}
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 26px;
+
+    &__card {
+      width: 282px;
+      height: 209px;
+
+      row-gap: 11px;
+    }
+  }
+
+  .cards__img {
+    position: absolute;
+    right: 80px;
+    top: -10px;
+
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
 }
