--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -10,7 +10,6 @@
     z-index: 1;
     display: grid;
 
-    margin: 3px;
     padding: 20px;
 
     border-radius: 30px;
@@ -23,6 +22,8 @@
 
     &-bg {
       z-index: 3;
+
+      padding: 3px;
 
       box-shadow: 0px 4px 20px rgba(128, 128, 128, 0.3);
       border-radius: 30px;
