--- a/src/scss/stats.scss
+++ b/src/scss/stats.scss
@@ -1,12 +1,20 @@
 .stats {
   padding-top: 50px;
+  padding-bottom: 48px;
 
-  // & > .container {
-  // }
+  & > .container {
+    p {
+      color: $c-gray;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+    }
+  }
 
   &__wrap {
     position: relative;
     height: 409px;
+    margin-bottom: 116px;
 
     color: $c-white;
 
@@ -14,6 +22,38 @@
 
     & > * {
       position: absolute;
+    }
+
+    & > .bubbles {
+      .bubbles--decorative {
+        position: absolute;
+        top: 490px;
+        left: 2px;
+      }
+
+      & > .bubble-wrap {
+        &:nth-child(1) {
+          top: -20px;
+          left: 13px;
+        }
+
+        &:nth-child(2) {
+          top: 178px;
+          left: 163px;
+        }
+
+        &:nth-child(3) {
+          top: 355px;
+          left: 163px;
+        }
+
+        box-shadow: 0px 4px 100px rgba(210, 210, 210, 0.86);
+      }
+
+      img {
+        width: 50px;
+        height: 50px;
+      }
     }
   }
 
