--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -8,6 +8,14 @@
 
 @font-face {
   font-family: "Gilroy";
+  src: url("../fonts/gilroy-medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Gilroy";
   src: url("../fonts/gilroy-semibold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
