--- a/src/scss/burger.scss
+++ b/src/scss/burger.scss
@@ -1,146 +1,134 @@
 .hamburger {
-	width: 32px;
-	height: 32px;
-	display: inline-block;
-	cursor: pointer;
-	transition-property: opacity, filter;
-	transition-duration: 0.5s;
-	transition-timing-function: linear;
-	font: inherit;
-	color: inherit;
-	text-transform: none;
-	background-color: transparent;
-	border: 0;
-	margin: 0;
-	overflow: visible;
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.5s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible;
 }
 .hamburger:hover {
-	opacity: 0.7;
+  opacity: 0.7;
 }
 .hamburger.is-active:hover {
-	opacity: 0.7;
+  opacity: 0.7;
 }
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-	background-color: #000;
+  background-color: #000;
 }
 
 .hamburger-box {
-	width: 32px;
-	height: 32px;
-	display: inline-flex;
-	justify-content: center;
-	position: relative;
+  width: 32px;
+  height: 32px;
+  display: inline-flex;
+  justify-content: center;
+  position: relative;
 }
 
 .hamburger-inner {
-	top: 50%;
+  top: 50%;
 
-	display: block;
-	margin-top: -2px;
-	border-radius: 50px;
+  display: block;
+  margin-top: -2px;
+  border-radius: 50px;
 }
 .hamburger-inner,
 .hamburger-inner::before,
 .hamburger-inner::after {
-	width: 24px;
-	height: 2px;
-	background-color: #000;
-	border-radius: 4px;
-	position: absolute;
-	transition-property: transform;
-	transition-duration: 0.15s;
-	transition-timing-function: ease;
+  width: 24px;
+  height: 2px;
+  background-color: #000;
+  border-radius: 4px;
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 0.15s;
+  transition-timing-function: ease;
 }
 .hamburger-inner::before,
 .hamburger-inner::after {
-	content: "";
-	display: block;
+  content: "";
+  display: block;
 }
 .hamburger-inner::before {
-	top: -10px;
+  top: -10px;
 }
 .hamburger-inner::after {
-	bottom: -10px;
+  bottom: -10px;
 }
 
 .hamburger--slider .hamburger-inner {
-	top: 8px;
+  top: 8px;
 }
 .hamburger--slider .hamburger-inner::before {
-	top: 8px;
-	transition-property: transform, opacity;
-	transition-timing-function: ease;
-	transition-duration: 0.15s;
+  top: 8px;
+  transition-property: transform, opacity;
+  transition-timing-function: ease;
+  transition-duration: 0.15s;
 }
 .hamburger--slider .hamburger-inner::after {
-	top: 16px;
+  top: 16px;
 }
 
 .hamburger--slider.is-active .hamburger-inner {
-	transform: translate3d(0, 7px, 0) rotate(45deg);
+  transform: translate3d(0, 7px, 0) rotate(45deg);
 }
 .hamburger--slider.is-active .hamburger-inner::before {
-	transform: rotate(-45deg) translate3d(-5px, -4.8px, 0);
-	opacity: 0;
+  transform: rotate(-45deg) translate3d(-5px, -4.8px, 0);
+  opacity: 0;
 }
 .hamburger--slider.is-active .hamburger-inner::after {
-	transform: translate3d(0, -16px, 0) rotate(-90deg);
+  transform: translate3d(0, -16px, 0) rotate(-90deg);
 }
 
 // burger menu
 aside {
-	opacity: 0;
-	position: fixed;
-	z-index: 10;
-	top: 0;
-	right: -100%;
-	overflow: hidden;
+  opacity: 0;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  right: -100%;
+  overflow: hidden;
 
-	transition: right 1s cubic-bezier(0.28, 0, 0.1, 1), opacity 0.1s cubic-bezier(0.28, 0, 0.1, 1) 1s;
-	width: 100vw;
-	height: 100vh;
-	background: $g-bg;
+  transition: right 1s cubic-bezier(0.28, 0, 0.1, 1),
+    opacity 0.1s cubic-bezier(0.28, 0, 0.1, 1) 1s;
+  width: 100vw;
+  height: 100vh;
+  background: $g-bg;
 
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-	box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
+  box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
 
-	.aside__icon {
-		&-wrapper {
-			width: 84px;
-			height: 32px;
-			margin-bottom: 36px;
+  a {
+    color: $c-black;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 34px;
+    text-align: center;
+    text-decoration: none;
 
-			display: flex;
-			justify-content: space-between;
-		}
-
-		width: 32px;
-		height: 32px;
-	}
-
-	a {
-		color: $c-black;
-		font-size: 24px;
-		font-weight: 600;
-		line-height: 34px;
-		text-align: center;
-		text-decoration: none;
-
-		&:not(:last-child) {
-			margin-bottom: 28px;
-		}
-	}
+    &:not(:last-child) {
+      margin-bottom: 28px;
+    }
+  }
 }
 
 ._active {
-	right: 0%;
-	opacity: 1;
-	transition: right 1s cubic-bezier(0.28, 0, 0.1, 1), opacity 0.15s cubic-bezier(0.28, 0, 0.1, 1);
+  right: 0%;
+  opacity: 1;
+  transition: right 1s cubic-bezier(0.28, 0, 0.1, 1),
+    opacity 0.15s cubic-bezier(0.28, 0, 0.1, 1);
 }
