--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -41,7 +41,7 @@
     height: 24px;
     padding: 2px;
 
-    background-color: $c-gray;
+    background-color: #d8d8d8;
     border-radius: 50px;
 
     transition: 0.4s cubic-bezier(0.28, 0, 0.1, 1);
