--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -3,21 +3,26 @@
   top: 0;
   z-index: 100;
 
-  display: none;
+  display: flex;
+  opacity: 0;
   width: 100%;
   height: 100vh;
   align-items: center;
   justify-content: center;
   margin-bottom: -100vh;
 
-  background: rgba($color: $c-black, $alpha: 0.5);
+  background: rgba($color: $c-black, $alpha: 0);
+
+  transition: 0.4s cubic-bezier(0.28, 0, 0.1, 1);
 
   pointer-events: none;
 
   & > .form {
     position: relative;
+    top: 100px;
+    opacity: 0.7;
 
-    pointer-events: all;
+    transition: 0.6s cubic-bezier(0.28, 0, 0.1, 1);
 
     & > .bubble-wrap {
       z-index: 2;
@@ -28,5 +33,14 @@
 }
 
 .__active {
-  display: flex;
+  & > .form {
+    opacity: 1;
+    transform: translateY(-100px);
+    transition: 0.6s cubic-bezier(0.28, 0, 0.1, 1);
+  }
+  opacity: 1;
+  pointer-events: all;
+
+  transition: 0.4s cubic-bezier(0.28, 0, 0.1, 1);
+  background: rgba($color: $c-black, $alpha: 0.6);
 }
