--- a/src/scss/result.scss
+++ b/src/scss/result.scss
@@ -53,20 +53,16 @@
     margin-bottom: 16px;
   }
 
-  &__pic {
-    picture {
-      &:nth-child(1) {
-        & > picture > * {
-          margin-top: -50px;
-          margin-bottom: -90px;
-        }
-      }
+  & > &__pic {
+    & > picture > * {
+      margin-top: -50px;
+      margin-bottom: -90px;
+    }
 
-      &:nth-child(2) {
-        & > picture > * {
-          margin-top: 20px;
-          margin-bottom: 0;
-        }
+    &:last-of-type {
+      & > picture > * {
+        margin-top: 20px;
+        margin-bottom: 0;
       }
     }
   }
