--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,4 +1,4 @@
-.advantages {
+.about {
   position: relative;
 
   padding: 40px 0 138px;
@@ -70,7 +70,7 @@
 
     background-color: $c-orange;
 
-    & > .advantages__tag {
+    & > .about__tag {
       position: absolute;
 
       &:nth-child(7) {
