--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,7 +9,7 @@
 
 @import "header.scss";
 @import "intro.scss";
-@import "advantages.scss";
+@import "about.scss";
 @import "integrations.scss";
 @import "cards.scss";
 @import "modules.scss";
