--- a/src/scss/burger.scss
+++ b/src/scss/burger.scss
@@ -112,6 +112,66 @@ aside {
 
   box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
 
+  .container {
+    @media ($m-xxs) and (orientation: landscape) {
+      padding-top: 70px;
+      padding-bottom: 50px;
+
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      justify-items: flex-start;
+  
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      column-gap: 20px;
+  
+      grid-template-areas:
+        "anchors social"
+        "anchors tel"
+        "anchors ."
+        "anchors button";
+  
+      & > a {
+        grid-area: anchors;
+        margin-bottom: 0 !important;
+  
+        &:nth-child(1) {
+          grid-row: 1 / 2;
+        }
+  
+        &:nth-child(2) {
+          grid-row: 2 / 3;
+        }
+  
+        &:nth-child(3) {
+          grid-row: 3 / 4;
+        }
+  
+        &:nth-child(4) {
+          grid-row: 4 / 5;
+        }
+  
+        &:nth-child(5) {
+          grid-area: tel;
+        }
+      }
+  
+      .button {
+        grid-area: button;
+  
+        width: 100%;
+        height: 100%;
+      }
+  
+      .social-icons-wrapper {
+        grid-area: social;
+        margin-bottom: 0;
+      }
+    }
+  }
+
   a {
     color: $c-black;
     font-size: 24px;
@@ -122,59 +182,6 @@ aside {
 
     &:not(:last-child) {
       margin-bottom: 28px;
-    }
-  }
-
-  @media ($m-xxs) and (orientation: landscape) {
-    padding: 65px 40px 50px;
-    justify-items: flex-start;
-
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    column-gap: 20px;
-
-    grid-template-areas:
-      "anchors social"
-      "anchors tel"
-      "anchors ."
-      "anchors button";
-
-    & > a {
-      grid-area: anchors;
-      margin-bottom: 0 !important;
-
-      &:nth-child(1) {
-        grid-row: 1 / 2;
-      }
-
-      &:nth-child(2) {
-        grid-row: 2 / 3;
-      }
-
-      &:nth-child(3) {
-        grid-row: 3 / 4;
-      }
-
-      &:nth-child(4) {
-        grid-row: 4 / 5;
-      }
-
-      &:nth-child(5) {
-        grid-area: tel;
-      }
-    }
-
-    .button {
-      grid-area: button;
-
-      width: 100%;
-      height: 100%;
-    }
-
-    .social-icons-wrapper {
-      grid-area: social;
-      margin-bottom: 0;
     }
   }
 }
