--- a/src/scss/burger.scss
+++ b/src/scss/burger.scss
@@ -113,6 +113,10 @@ aside {
   box-shadow: 0px 2.06089px 51.5222px rgba(128, 128, 128, 0.3);
 
   .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     @media ($m-xxs) and (orientation: landscape) {
       padding-top: 70px;
       padding-bottom: 50px;
