floor highlighting in progress

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,6 +13,7 @@
 @import "integrations.scss";
 @import "cards.scss";
 @import "modules.scss";
+@import "floors.scss";
 @import "examples.scss";
 @import "result.scss";
 @import "narrate.scss";
