--- a/src/scss/floors.scss
+++ b/src/scss/floors.scss
@@ -7,11 +7,19 @@
     position: relative;
 
     align-self: center;
+    width: auto;
     height: 465px;
 
     picture * {
       width: auto;
       height: 100%;
+    }
+
+    .__js-active {
+      transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
+        opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
+
+      opacity: 1;
     }
   }
 
@@ -26,6 +34,11 @@
     height: 100%;
     margin: 0 auto;
     background-color: rgba($color: #000000, $alpha: 0.5);
+
+    transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1) 1s,
+      opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.7s;
+
+    opacity: 0;
 
     clip-path: polygon(
       0% 0%,
@@ -44,12 +57,81 @@
       0% 33%
     );
 
-    transition: 0.4s cubic-bezier(0.28, 0, 0.1, 1);
+    &--1 {
+      clip-path: polygon(
+        21.1% 34.1%,
+        43.5% 20.4%,
+        57.4% 27.9%,
+        60.3% 26.3%,
+        73.6% 33.9%,
+        73.6% 36.9%,
+        76% 38.2%,
+        75.9% 49.38%,
+        73.5% 48.4%,
+        73.6% 46.3%,
+        60.3% 40.8%,
+        57.7% 41.6%,
+        43.7% 35.6%,
+        21.1% 46.2%
+      );
+    }
 
-    transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1) 1s,
-      opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.7s;
+    &--2 {
+      clip-path: polygon(
+        21.1% 45.9%,
+        43.8% 35.4%,
+        57.7% 41.3%,
+        60.2% 40.6%,
+        75.9% 47%,
+        75.9% 49.1%,
+        76.2% 49.4%,
+        76.1% 60.68%,
+        73.5% 60%,
+        73.5% 58.1%,
+        60.3% 54.4%,
+        57.6% 54.9%,
+        43.7% 50.7%,
+        21.1% 58%
+      );
+    }
 
-    opacity: 0;
+    &--3 {
+      clip-path: polygon(
+        21.1% 58%,
+        43.8% 50.7%,
+        57.7% 54.7%,
+        60.2% 54.2%,
+        73.6% 58.1%,
+        73.6% 59.8%,
+        76% 60.4%,
+        76.1% 72.38%,
+        73.5% 72%,
+        73.5% 70%,
+        60.3% 67.9%,
+        57.7% 68.2%,
+        43.7% 65.6%,
+        21.1% 70%
+      );
+    }
+
+    &--4 {
+      clip-path: polygon(
+        21.1% 69.8%,
+        43.8% 65.3%,
+        57.7% 67.9%,
+        60.2% 67.5%,
+        73.5% 69.8%,
+        73.5% 71.7%,
+        76% 72.1%,
+        76% 84.48%,
+        73.6% 84.4%,
+        73.6% 84.4%,
+        60.3% 84%,
+        57.7% 84%,
+        43.7% 83.7%,
+        21.1% 84.3%
+      );
+    }
   }
 
   &__marker {
@@ -63,113 +145,21 @@
     &:nth-of-type(1) {
       top: 145px;
       left: 355px;
-
-      &:hover ~ .floors__highlight {
-        transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
-          opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
-
-        opacity: 1;
-        clip-path: polygon(
-          21.1% 34.1%,
-          43.5% 20.4%,
-          57.4% 27.9%,
-          60.3% 26.3%,
-          73.6% 33.9%,
-          73.6% 36.9%,
-          76% 38.2%,
-          75.9% 49.38%,
-          73.5% 48.4%,
-          73.6% 46.3%,
-          60.3% 40.8%,
-          57.7% 41.6%,
-          43.7% 35.6%,
-          21.1% 46.2%
-        )
-      }
     }
 
     &:nth-of-type(2) {
       top: 200px;
       left: 295px;
-
-      &:hover ~ .floors__highlight {
-        transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
-          opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
-
-        opacity: 1;
-        clip-path: polygon(
-          21.1% 45.9%,
-          43.8% 35.4%,
-          57.7% 41.3%,
-          60.2% 40.6%,
-          75.9% 47%,
-          75.9% 49.1%,
-          76.2% 49.4%,
-          76.1% 60.68%,
-          73.5% 60%,
-          73.5% 58.1%,
-          60.3% 54.4%,
-          57.6% 54.9%,
-          43.7% 50.7%,
-          21.1% 58%
-        );
-      }
     }
 
     &:nth-of-type(3) {
       top: 270px;
       left: 360px;
-
-      &:hover ~ .floors__highlight {
-        transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
-          opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
-
-        opacity: 1;
-        clip-path: polygon(
-          21.1% 58%,
-          43.8% 50.7%,
-          57.7% 54.7%,
-          60.2% 54.2%,
-          73.6% 58.1%,
-          73.6% 59.8%,
-          76% 60.4%,
-          76.1% 72.38%,
-          73.5% 72%,
-          73.5% 70%,
-          60.3% 67.9%,
-          57.7% 68.2%,
-          43.7% 65.6%,
-          21.1% 70%
-        );
-      }
     }
 
     &:nth-of-type(4) {
       top: 325px;
       left: 295px;
-
-      &:hover ~ .floors__highlight {
-        transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
-          opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
-
-        opacity: 1;
-        clip-path: polygon(
-          21.1% 69.8%,
-          43.8% 65.3%,
-          57.7% 67.9%,
-          60.2% 67.5%,
-          73.5% 69.8%,
-          73.5% 71.7%,
-          76% 72.1%,
-          76% 84.48%,
-          73.6% 84.4%,
-          73.6% 84.4%,
-          60.3% 84%,
-          57.7% 84%,
-          43.7% 83.7%,
-          21.1% 84.3%
-        );
-      }
     }
   }
 }
