--- a/src/scss/floors.scss
+++ b/src/scss/floors.scss
@@ -1,4 +1,6 @@
 .floors {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -13,13 +15,6 @@
     picture * {
       width: auto;
       height: 100%;
-    }
-
-    .__js-active {
-      transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
-        opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
-
-      opacity: 1;
     }
   }
 
@@ -142,6 +137,10 @@
     width: 32px;
     color: #f99f3d;
 
+    & > svg {
+      pointer-events: none;
+    }
+
     &:nth-of-type(1) {
       top: 145px;
       left: 355px;
@@ -162,4 +161,111 @@
       left: 295px;
     }
   }
+
+  &__floor-and-space {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 4px;
+
+    * {
+      width: fit-content;
+    }
+  }
+
+  &__floor {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 47px;
+  }
+
+  &__space {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  &__on-sell {
+    margin-bottom: 8px;
+
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  &__rooms {
+    display: flex;
+    justify-content: space-between;
+
+    .floors__room {
+      font-size: 12px;
+      line-height: 16px;
+      font-weight: bold;
+      color: $c-orange;
+      border-radius: 4px;
+
+      padding: 5px 11px 6px;
+      background-color: $c-white;
+
+      &--disabled {
+        background-color: transparentize($c-white, 0.5);
+      }
+    }
+  }
+
+  &__variants {
+    width: 236px;
+    height: 158px;
+    padding: 12px 22px 20px;
+    background-color: $c-orange;
+    border-radius: inherit;
+    border: 2px solid white;
+    color: $c-white;
+
+    box-shadow: 0px 3.18584px 79.646px rgba(128, 128, 128, 0.3);
+
+    hr {
+      margin-bottom: 14px;
+      height: 2px;
+
+      background: $c-orange-light;
+    }
+
+    &-wrap {
+      position: absolute;
+      z-index: 10;
+      top: 30%;
+      left: calc(50% - 134px);
+
+      width: 268px;
+      height: 190px;
+      padding: 16px;
+
+      border: 2px solid white;
+      border-radius: 8px;
+
+      background: linear-gradient(
+        102.05deg,
+        rgba(255, 255, 255, 0.2) 12.61%,
+        rgba(255, 255, 255, 0.3) 91.76%
+      );
+
+      pointer-events: none;
+      opacity: 0;
+
+      transition: opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1);
+
+      &.__js-active {
+        transition: opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.4s;
+        pointer-events: all;
+      }
+    }
+  }
+}
+
+.__js-active {
+  transition: clip-path 0.4s cubic-bezier(0.28, 0, 0.1, 1),
+    opacity 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.1s;
+
+  opacity: 1;
 }
