small footer additions and overall fixes

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -36,6 +36,7 @@ $c-green: #48b452;
 
 // Fonts
 $Gilroy: "Gilroy", Arial, ui-sans-serif;
+$PT: "PT Root UI", Arial, ui-sans-serif;
 
 // Gradients
 $g-bg: linear-gradient(181.49deg, rgba(255, 255, 255, 0) 56.58%, #ffffff 98.74%), #e7e7e9;
