--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -29,3 +29,12 @@
   font-style: normal;
   font-display: swap;
 }
+
+
+@font-face {
+  font-family: "PT Root UI";
+  src: url("../fonts/PT-Root-UI_Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
