--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,65 +1,111 @@
 .intro {
-	padding: 72px 0 160px;
-	background: $g-bg;
+  padding: 72px 0 160px;
+  background: $g-bg;
 
-	&__text {
-		& > h1 {
-			width: 272px;
-			margin: 75px 0 24px;
+  @media ($m-xxxxs) and (orientation: landscape) {
+    padding: 65px 0 40px;
+  }
 
-			font-weight: 600;
-			font-size: 28px;
-			line-height: 33px;
-		}
+  &__text {
+    & > h1 {
+      width: 272px;
+      margin: 75px 0 24px;
 
-		& > h2 {
-			width: 272px;
+      font-weight: 600;
+      font-size: 28px;
+      line-height: 33px;
+    }
 
-			font-weight: 400;
-			font-size: 16px;
-			line-height: 22px;
-		}
-	}
+    & > h2 {
+      width: 272px;
 
-	& > .container {
-		display: flex;
-		flex-direction: column;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+    }
 
-		& > .bubbles {
-			position: relative;
-			top: -72px;
-			left: auto;
+    @media ($m-xxxxs) and (orientation: landscape) {
+      & > h1 {
+        margin: 0 0 14px;
+      }
 
-			height: 0;
+      & > h2 {
+        margin-bottom: 14px;
+      }
+    }
+  }
 
-			& > .bubble-wrap {
-				&:nth-child(1) {
-					top: 72px;
-				}
+  & > .container {
+    display: flex;
+    flex-direction: column;
 
-				&:nth-child(2) {
-					top: 127px;
-					right: 0;
-				}
+    & > .bubbles {
+      position: relative;
+      top: -72px;
+      left: auto;
 
-				&:nth-child(3) {
-					top: 435px;
-				}
+      height: 0;
 
-				&:nth-child(4) {
-					top: 435px;
-					right: 0;
-				}
+      & > .bubble-wrap {
+        &:nth-child(1) {
+          top: 72px;
+        }
 
-				&:nth-child(5) {
-					top: 501px;
-				}
+        &:nth-child(2) {
+          top: 127px;
+          right: 0;
+        }
 
-				&:nth-child(6) {
-					top: 501px;
-					right: 0;
-				}
-			}
-		}
-	}
+        &:nth-child(3) {
+          top: 435px;
+        }
+
+        &:nth-child(4) {
+          top: 435px;
+          right: 0;
+        }
+
+        &:nth-child(5) {
+          top: 501px;
+        }
+
+        &:nth-child(6) {
+          top: 501px;
+          right: 0;
+        }
+
+        @media ($m-xxxxs) and (orientation: landscape) {
+          &:nth-child(1) {
+            top: 88px;
+            right: 0;
+          }
+
+          &:nth-child(2) {
+            top: 26px;
+            right: 60px;
+          }
+
+          &:nth-child(3) {
+            top: 160px;
+            right: 68px;
+          }
+
+          &:nth-child(4) {
+            top: 160px;
+            right: 0;
+          }
+
+          &:nth-child(5) {
+            top: 234px;
+            right: 220px;
+          }
+
+          &:nth-child(6) {
+            top: 234px;
+            right: 0;
+          }
+        }
+      }
+    }
+  }
 }
